{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 348,
  "lineage": "2e7bac37-15a7-6811-4cba-f8873bf118d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-public-sec-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:security-group/sg-0907a49a3472020ee",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0907a49a3472020ee",
            "ingress": [],
            "name": "default",
            "owner_id": "823398877163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "allow-all-outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks-natgw-eip",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "ap-southeast-1a",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-007077f6ca066f1e8",
            "public_dns": "ec2-18-141-90-65.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.90.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "eks-natgw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0676e02c79831c025",
            "public_dns": "ec2-18-141-90-99.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.90.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "eks-natgw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00e865e75c74fdd71",
            "public_dns": "ec2-13-251-13-76.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.13.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "eks-natgw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01c17b37d679080fe",
            "owner_id": "823398877163",
            "tags": {
              "Environment": "staging",
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks-natgw",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "ap-southeast-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007077f6ca066f1e8",
            "id": "nat-0df120ef7328217b3",
            "network_interface_id": "eni-08389a7cbbead26c7",
            "private_ip": "10.128.0.16",
            "public_ip": "18.141.90.65",
            "subnet_id": "subnet-088c2210fc12ec441",
            "tags": {
              "Environment": "staging",
              "Name": "eks-natgw"
            }
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0676e02c79831c025",
            "id": "nat-01285e066622b5695",
            "network_interface_id": "eni-0f7d61f53d09c6e31",
            "private_ip": "10.128.6.9",
            "public_ip": "18.141.90.99",
            "subnet_id": "subnet-016e0859cd646ab48",
            "tags": {
              "Environment": "staging",
              "Name": "eks-natgw"
            }
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e865e75c74fdd71",
            "id": "nat-076ad4d2d72a2558b",
            "network_interface_id": "eni-0f836b804c5013f96",
            "private_ip": "10.128.10.29",
            "public_ip": "13.251.13.76",
            "subnet_id": "subnet-0c2a176a2a81683b0",
            "tags": {
              "Environment": "staging",
              "Name": "eks-natgw"
            }
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet-route-table",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "ap-southeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-039b9bbb9ff5a2750",
            "owner_id": "823398877163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0df120ef7328217b3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "private-subnet-route-table"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a6efd43fc19ea82a",
            "owner_id": "823398877163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01285e066622b5695",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "private-subnet-route-table"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eeee857a9eeaf34d",
            "owner_id": "823398877163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-076ad4d2d72a2558b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "private-subnet-route-table"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05eb49a040643ced6",
            "owner_id": "823398877163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c17b37d679080fe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "public-subnet-route-table"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-route-table-association",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "ap-southeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd01632373d7ab9b",
            "route_table_id": "rtb-039b9bbb9ff5a2750",
            "subnet_id": "subnet-0000f9b6ac8607e9b"
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_route_table.private-subnet-route-table",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076300deaebeae2ed",
            "route_table_id": "rtb-0a6efd43fc19ea82a",
            "subnet_id": "subnet-051c9d8c3db3b7798"
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_route_table.private-subnet-route-table",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0155957394a4b56cc",
            "route_table_id": "rtb-0eeee857a9eeaf34d",
            "subnet_id": "subnet-0286c41216cbb7d94"
          },
          "dependencies": [
            "aws_eip.eks-natgw-eip",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.eks-natgw",
            "aws_route_table.private-subnet-route-table",
            "aws_subnet.eks-private-subnet",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-route-table-association",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "ap-southeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e32ab66af8caba26",
            "route_table_id": "rtb-05eb49a040643ced6",
            "subnet_id": "subnet-088c2210fc12ec441"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public-subnet-route-table",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065cd5ad406fcd66a",
            "route_table_id": "rtb-05eb49a040643ced6",
            "subnet_id": "subnet-016e0859cd646ab48"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public-subnet-route-table",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b08890724308f2fc",
            "route_table_id": "rtb-05eb49a040643ced6",
            "subnet_id": "subnet-0c2a176a2a81683b0"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public-subnet-route-table",
            "aws_subnet.eks-public-subnet",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:security-group/sg-06e46c553e788cb75",
            "description": "allow-all-inbound",
            "egress": [],
            "id": "sg-06e46c553e788cb75",
            "ingress": [],
            "name": "allow-all-inbound",
            "name_prefix": null,
            "owner_id": "823398877163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "allow-all-inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-inbound-rules",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2799478315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06e46c553e788cb75",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-all-inbound",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-private-subnet",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "ap-southeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:subnet/subnet-0000f9b6ac8607e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.128.16.0/22",
            "id": "subnet-0000f9b6ac8607e9b",
            "map_public_ip_on_launch": false,
            "owner_id": "823398877163",
            "tags": {
              "Environment": "staging",
              "Name": "eks-private-subnet"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:subnet/subnet-051c9d8c3db3b7798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.128.20.0/22",
            "id": "subnet-051c9d8c3db3b7798",
            "map_public_ip_on_launch": false,
            "owner_id": "823398877163",
            "tags": {
              "Environment": "staging",
              "Name": "eks-private-subnet"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:subnet/subnet-0286c41216cbb7d94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.128.24.0/22",
            "id": "subnet-0286c41216cbb7d94",
            "map_public_ip_on_launch": false,
            "owner_id": "823398877163",
            "tags": {
              "Environment": "staging",
              "Name": "eks-private-subnet"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public-subnet",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "ap-southeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:subnet/subnet-088c2210fc12ec441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.128.0.0/22",
            "id": "subnet-088c2210fc12ec441",
            "map_public_ip_on_launch": true,
            "owner_id": "823398877163",
            "tags": {
              "Environment": "staging",
              "Name": "eks-public-subnet"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:subnet/subnet-016e0859cd646ab48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.128.4.0/22",
            "id": "subnet-016e0859cd646ab48",
            "map_public_ip_on_launch": true,
            "owner_id": "823398877163",
            "tags": {
              "Environment": "staging",
              "Name": "eks-public-subnet"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:subnet/subnet-0c2a176a2a81683b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.128.8.0/22",
            "id": "subnet-0c2a176a2a81683b0",
            "map_public_ip_on_launch": true,
            "owner_id": "823398877163",
            "tags": {
              "Environment": "staging",
              "Name": "eks-public-subnet"
            },
            "vpc_id": "vpc-0d673811a666622ea"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:823398877163:vpc/vpc-0d673811a666622ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-0990df1b76c99b132",
            "default_route_table_id": "rtb-08d56159b3cc68f21",
            "default_security_group_id": "sg-0907a49a3472020ee",
            "dhcp_options_id": "dopt-3875c85d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d673811a666622ea",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08d56159b3cc68f21",
            "owner_id": "823398877163",
            "tags": {
              "Environment": "staging",
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}